--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,281 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin: 0px;
+  padding: 0px;
+}
+html {
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#home, #about, #skills, #contact {
+  scroll-margin-top: 120px; /* Match your navbar height */
+}
+
+/* Applies to entire scrollbar */
+::-webkit-scrollbar {
+  width: 10px;            /* Width of vertical scrollbar */
+  height: 8px;               /* Height of horizontal scrollbar */
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: rgb(35, 35, 35);
+  border-radius: 10px;
+}
+
+/* Thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background: #00ffff;        /* Neon blue */
+  border-radius: 10px;
+  border: 2px solid #202020;
+  transition: 0.3s;
+}
+
+/* On hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00dddd;
+}
+
+
+body {
+  font-family: 'Roboto';
+  background-color: rgb(27, 26, 26);
+  cursor: default;
+}
+.page {
+  color: white;
+}
+
+/* Navbar */
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  padding: 30px;
+  justify-content: space-between;
+  font-weight: 500;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+}
+.navbar .other-nav-parts {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.navbar .other-nav-parts div{
+  padding: 10px;
+  margin: 5px;
+  transition: 0.3s;
+  border-bottom: 2px solid transparent;
+}
+.navbar .other-nav-parts a{
+  color: white;
+  text-decoration: none;
+}
+.navbar .other-nav-parts div:hover {
+  border-bottom: 2px solid white;
+}
+
+/* Introduction */
+
+.intro-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 5%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.introduction{
+  width: 40%;
+  padding-left: 15%;
+
+}
+.introduction h1 {
+  font-size: 110px;
+}
+.introduction h2 {
+  font-size: 90px;
+}
+.profileimg-cover {
+  height: 400px;
+  width: 400px;
+  background-color: rgb(255, 255, 255, 0.5);
+  border-radius: 30px;
+  transform: rotate(10deg);
+  box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
+  margin-right: 10%;
+}
+.profileimg{
+  width: 400px;
+  border: 1px double white;
+  height: 400px;
+  border-radius: 30px;
+  transform: rotate(-10deg);
+}
+.profileimg img {
+  width: 100%;
+}
+.intro-para {
+  padding: 20%;
+  text-align: center;
+}
+.intro-para p {
+  line-height: 30px;
+  font-weight: 300;
+}
+
+/* About Section */
+
+.about h1 {
+  text-align: center;
+  padding: 20px;
+}
+.about .about-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 10%;
+}
+.about .about-container .about-element {
+  width: 100%;
+  padding: 50px;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.about .about-container .about-element h2 {
+  min-width: 150px;
+}
+.about .about-container .about-element p {
+  width: 50%;
+  line-height: 25px;
+  font-weight: 300;
+  min-width: 120px;
+  text-align: justify;
+  color: rgb(218, 218, 218);
+}
+.about .about-container .about-element p b {
+  color: white;
+}
+
+/* Skills */
+
+.skills {
+  margin-top: 20%;
+  
+}
+.skills h1 {
+  text-align: center;
+}
+
+.skills .skill-container {
+  display: flex;
+  align-items: baseline;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.skills .skill-container .skill-element {
+  margin: 80px;
+  width: 10%;
+  height: 100%;
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.skills .skill-container .skill-element img {
+  width: 100%;
+}
+.skills .skill-container #html-logo {
+  width: 70%;
+  align-self: center;
+  padding-bottom: 20px;
+}
+.skills .skill-container #css-logo {
+  width: 95%;
+  align-self: center;
+}
+.skills .skill-container #js-logo {
+  width: 92%;
+  align-self: center;
+}
+.skills .skill-container #ts-logo {
+  width: 70%;
+  align-self: center;
+  padding-bottom: 20px;
+}
+.skills .skill-container #react-logo {
+  width: 130%;
+  align-self: center;
+}
+.skills .skill-container .skill-element p {
+  text-align: center;
+  padding: 10px;
+}
+
+/* Contact */
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10%;
+}
+.contact {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 20%;
+  margin-top: 5%;
+  margin-bottom: 12%;
+  border-radius: 3vw;
+  box-sizing: border-box;
+  width: 50%;
+}
+.contact .photo-wrapper {
+  height: 200px;
+  width: 200px;
+  border-radius: 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.contact .photo{
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+.contact .photo img {
+  width: 200px;
+  padding: 50px;
+}
+.contact .contact-details {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-right: 50px;
+  width: 50%;
+  box-sizing: border-box;
+}
+
+.contact .contact-details h2 {
+  font-size: 35px;
+}
+.contact .contact-details p {
+  line-height: 25px;
+  margin-top: 10px;
+  color: gray;
+}
+.contact .contact-details p span{
+  color: white;
+  font-family: typewritter;
+}
+.contact .contact-details p span:hover{
+  text-decoration: underline;
 }
